Fix 'status' post styling
The styling was messed up after the removal of styling of .avatar

--- a/less/layouts.less
+++ b/less/layouts.less
@@ -4,7 +4,7 @@
 
 #content,
 #footer {
-	background: #fff url(images/content-orange-line.png) repeat-x;
+	background: #fff ~"url(images/content-orange-line.png)" repeat-x;
 	border-radius: 0 0 5px 5px;
 	padding: 40px;
 	box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
