--- a/less/media.less
+++ b/less/media.less
@@ -68,6 +68,10 @@ img.alignright {
 	margin: 0 0 12px @smallGutterWidth;
 }
 
+/* Avatars */
+.avatar {
+	float: left;
+}
 
 /* Remove borders from some images */
 .wp-smiley,
@@ -105,7 +109,6 @@ iframe[seamless] {
 /**
  * Captions [caption]
  */
-
 .wp-caption {
 	background: @grayDarker;
 	border-radius: 0 0 3px 3px;
@@ -145,7 +148,6 @@ iframe[seamless] {
 /**
  * Galleries
  */
-
 .gallery {
 	display: block;
 	clear: both;
